--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#362B2C",
         "titleBar.activeBackground": "#4C3C3D",
         "titleBar.activeForeground": "#FBFAFA"
-    }
+    },
+    "liveServer.settings.port": 5501
 }
